# Exercises

./: .gitignore  Array.cpp  Forward_list.cpp  List.cpp  Vector.cpp
Cars/: CMakeLists.txt  Car.cpp  Car.hpp  Cars.cpp  Cars.hpp  ElectricCar.cpp  ElectricCar.hpp  ElectricEngine.hpp  Engine.hpp  HybridCar.cpp  HybridCar.hpp  PetrolCar.cpp  PetrolCar.hpp  PetrolEngine.hpp  README.md  main.cpp  mainn.cpp
DesignPaterns/Observer/: Observer.cpp
Memory_and_exception_managment/: CMakeLists.txt  FileOperations.cpp  List.cpp  own_Exception.cpp  ruleOf0.cpp  ruleOf5.cpp  test.cpp  unique_ptr.cpp
Memory_and_exception_managment/shared_ptr/: CMakeLists.txt  shared_ptr.cpp  shared_ptr.hpp
ModernCPP/shapes/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  main.cpp
Multithreading/ExercisesCodersSchool/: DeadlockInComprasion.cpp  SecureProgramWithAppropriateLocks.cpp
Multithreading/ParallelCountIf/: CMakeLists.txt  ParallerTests.cpp  lib.hpp
OpenGLProject/: Application.cpp  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
SHM/: Alcohol.cpp  Alcohol.hpp  CMakeLists.txt  Cargo.cpp  Cargo.hpp  Coordinates.cpp  Coordinates.hpp  DryFruit.cpp  DryFruit.hpp  Fruit.cpp  Fruit.hpp  Island.cpp  Island.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp  Store.cpp  Store.hpp  Time.cpp  Time.hpp  main.cpp
SHM/Include/: Cargo.hpp  DryFruit.hpp  Fruit.hpp  Item.hpp  Map.hpp  Store.hpp
SHM/Src/: Alcohol.cpp  Coordinates.cpp  DryFruit.cpp  Fruit.cpp  Island.cpp  Item.cpp  Map.cpp  Player.cpp  Ship.cpp  Store.cpp  Time.cpp  main.cpp
SHM/tests/: ShipCargoTest.cpp  ShipTest.cpp
STL/Associative_Containers/: Containers.cpp  Exercise.cpp
STL/Exercise1_AppendNewRecipe/: AppendNewRecipe.cpp  AppendNewRecipe.hpp  main.cpp
STL/Functor_Lambda_algorithm/: Iterators.cpp  Lambda.cpp  Modifying_algos.cpp  algorithm.cpp  algorithm_2.cpp  new.cpp
STL/Sequence_Containers/: ChatGPT.cpp  Deque.cpp  Remove-Vowels.cpp
STL/Sequence_Containers/CompressGrayscale/: CMakeLists.txt  compressGrayscale.cpp  compressGrayscale.hpp
Sequence_Containers/: Array.cpp  Deque.cpp  Length-sort.cpp  Vector.cpp
Sequence_Containers/CompressGrayscale/: Tests.cpp  compresGrayscale.hpp  compressGrayscale.cpp  compressGrayscale.hpp  obrazek.pgm
Templates/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp  Exercise4.cpp  Exercise5.cpp  Exercise6.cpp  Exercise7.cpp
Testing/std__sort/: CMakeLists.txt  sortTest.cpp  sorting.cpp  sortingGTest.cpp
WybraneZagadnieniaMatematykiDyskretnej/: Database.hpp  main.cpp
tutorial_GLPROJECT/: compiler.py  main.cpp
